Add decimal precision/scale
   + Add schema with some data integrity
   + Add specs for SondeReading importer/controller

--- a/app/views/sonde_readings/index.html.erb
+++ b/app/views/sonde_readings/index.html.erb
@@ -32,11 +32,11 @@
         <td><%= sonde_reading.temperature %></td>
         <td><%= sonde_reading.ph %></td>
         <td><%= sonde_reading.specific_conductivity %></td>
-        <td><%= sonde_reading.disolved_oxygen %></td>
+        <td><%= sonde_reading.dissolved_oxygen %></td>
         <td><%= sonde_reading.turbidity %></td>
         <td><%= sonde_reading.oxidation_reduction_potential %></td>
         <td><%= sonde_reading.total_dissolved_solids %></td>
-        <td><%= sonde_reading.disolved_oxygen_saturation %></td>
+        <td><%= sonde_reading.dissolved_oxygen_saturation %></td>
       </tr>
     <% end %>
   </tbody>
